--- a/home/config/config.yaml
+++ b/home/config/config.yaml
@@ -8,14 +8,40 @@ recovery:
   enabled: true
 nsq:
   enabled: true
-  default:
-    address: "localhost:4150"
-    lookup: ["nsqlookup-001.service.local:4161","nsqlookup-002.service.local:4161","nsqlookup-003.service.local:4161"]
+  configs:
+    default:
+      enabled: true
+      address: "localhost:4150"
+      lookup: ["nsqlookup-001.service.local:4161","nsqlookup-002.service.local:4161","nsqlookup-003.service.local:4161"]
 task_entry:
   enabled: true
   consumers:
     - driver: nsq
       name: default
+grpc_entry:
+  write_buffer_size: 1024
+  read_buffer_size: 1024
+  initial_window_size: 1
+  initial_conn_window_size: 1
+  keepalive_params:
+    max_connection_idle: 1s
+    max_connection_age: 2s
+    max_connection_age_grace: 2s
+    time: 1s
+    timeout: 1s
+  keepalive_policy:
+    permit_without_stream: true
+    min_time: 1s
+  codec: json
+  cp: gzip
+  dc: gzip
+  max_receive_message_size: 1
+  max_send_message_size: 1
+  max_concurrent_streams: 1
+  creds: tls
+  connection_timeout: 2s
+  max_header_list_size: 2
+  header_table_size: 1
 http_entry:
   enabled: true
   prefork: false
