--- a/home/config/config.yaml
+++ b/home/config/config.yaml
@@ -71,6 +71,11 @@ watcher:
   enabled: true
   address:
     - "127.0.0.1:2379"
+ws:
+  enabled: true
+  configs:
+    default:
+      origins: ["*"]
 etcd:
   enabled: true
   default:
