--- a/home/config/config.etcd.yaml
+++ b/home/config/config.etcd.yaml
@@ -1,7 +1,7 @@
 enabled: true
 configs:
   default:
-    enabled: true
+    enabled: false
     endpoints: ["localhost:2379"]
     auto_sync_interval: "3s"
     dial_timeout: "3s"
