--- a/home/config/config.log.yaml
+++ b/home/config/config.log.yaml
@@ -16,11 +16,11 @@ encoderConfig:
   levelEncoder: capitalColor
   timeEncoder: iso8601
   durationEncoder: string
-  callerEncoder: default
+  callerEncoder: full
   nameEncoder: ''
 outputPaths:
   - stderr
 errorOutputPaths:
   - stderr
-initialFields:
-  name: test
+#initialFields:
+#  name: test
