--- a/home/config/config.yaml
+++ b/home/config/config.yaml
@@ -108,3 +108,5 @@ nsq:
     test_shanghai:
       address: "localhost:4150"
       lookup: ["nsqlookup-001.service.local:4161","nsqlookup-002.service.local:4161","nsqlookup-003.service.local:4161"]
+http:
+  test: ""
