--- a/flerken.yaml
+++ b/flerken.yaml
@@ -22,7 +22,12 @@ protoc:
     - example/proto/hello/*.proto
     - example/proto/login/*.proto
   plugins:
-    go:
+    gogo:
+      - Mgoogle/protobuf/timestamp.proto=github.com/gogo/protobuf/types
+      - Mgoogle/protobuf/duration.proto=github.com/gogo/protobuf/types
+      - Mgoogle/protobuf/empty.proto=github.com/gogo/protobuf/types
+      - Mgoogle/api/annotations.proto=github.com/gogo/googleapis/google/api
+      - Mgoogle/protobuf/field_mask.proto=github.com/gogo/protobuf/types
       - paths=source_relative:.
     go-grpc:
       - paths=source_relative
