--- a/flerken.yaml
+++ b/flerken.yaml
@@ -22,13 +22,16 @@ protoc:
     - example/proto/hello/*.proto
     - example/proto/login/*.proto
   plugins:
-    gogo:
-      - Mgoogle/protobuf/timestamp.proto=github.com/gogo/protobuf/types
-      - Mgoogle/protobuf/duration.proto=github.com/gogo/protobuf/types
-      - Mgoogle/protobuf/empty.proto=github.com/gogo/protobuf/types
-      - Mgoogle/api/annotations.proto=github.com/gogo/googleapis/google/api
-      - Mgoogle/protobuf/field_mask.proto=github.com/gogo/protobuf/types
+    go:
+#      - Mgoogle/protobuf/timestamp.proto=github.com/gogo/protobuf/types
+#      - Mgoogle/protobuf/duration.proto=github.com/gogo/protobuf/types
+#      - Mgoogle/protobuf/empty.proto=github.com/gogo/protobuf/types
+#      - Mgoogle/api/annotations.proto=github.com/gogo/googleapis/google/api
+#      - Mgoogle/protobuf/field_mask.proto=github.com/gogo/protobuf/types
       - paths=source_relative:.
+    grpc-gateway:
+      - paths=source_relative
+      - allow_repeated_fields_in_body=true:.
     go-grpc:
       - paths=source_relative
       - require_unimplemented_servers=false:.
@@ -36,6 +39,7 @@ protoc:
       - :.
     openapiv2:
       - logtostderr=true
+      - allow_repeated_fields_in_body=true
       - repeated_path_param_separator=ssv:.
     govalidators:
       - paths=source_relative:.
