--- a/watcher/watcher.yaml
+++ b/watcher/watcher.yaml
@@ -1,3 +1,8 @@
 watcher:
   driver: "etcd"
-  projects: "hello,hello1"
+  name: "default"
+  projects:
+    - "hello"
+    - "hello1"
+  exclude:
+    - "hello"
