--- a/home/config/config.yaml
+++ b/home/config/config.yaml
@@ -128,6 +128,8 @@ logger:
     - stderr
   errorOutputPaths:
     - stderr
+  filterSuffix:
+    - "grpc-component"
   #initialFields:
   #  name: test
 
