--- a/example/gid/protobuf.yaml
+++ b/example/gid/protobuf.yaml
@@ -24,6 +24,7 @@ plugins:
     - paths=source_relative
     - require_unimplemented_servers=false:.
   lug:
+    - rest=true
     - paths=source_relative:.
   openapiv2:
     - logtostderr=true
