--- a/protobuf.yaml
+++ b/protobuf.yaml
@@ -19,6 +19,8 @@ deps:
 plugins:
   - name: "go"
     opt: "paths=source_relative"
+  - name: "lava"
+    opt: "paths=source_relative"
 root:
   - types
   - proto
