--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,23 +1,28 @@
-before:
-  hooks:
-    - go mod tidy
-    - go generate ./...
 builds:
-  - env:
+  - main: ./cmd/lava/main.go
+    id: lava
+    binary: lava
+    env:
       - CGO_ENABLED=0
+    goos:
+      - linux
+      - darwin
+      - windows
+    goarch:
+      - amd64
+  - main: ./cmd/protoc-gen-lava/main.go
+    id: protoc-gen-lava
+    binary: protoc-gen-lava
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      - darwin
+      - windows
+    goarch:
+      - amd64
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
+  - name_template: "{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}"
+    format: binary
+    replacements:
       amd64: x86_64
-checksum:
-  name_template: 'checksums.txt'
-snapshot:
-  name_template: "{{ .Tag }}-next"
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - '^docs:'
-      - '^test:'
