--- a/example/Makefile
+++ b/example/Makefile
@@ -1,15 +1,17 @@
 WORKDIR=`pwd`
 Domain=lava
 VersionBase=github.com/pubgo/lava
+Tag=$(shell git describe --abbrev=0 --tags)
 Version=$(shell git tag --sort=committerdate | tail -n 1)
 BuildTime=$(shell date "+%F %T")
 CommitID=$(shell git rev-parse --short=8 HEAD)
 GOPATH=$(shell go env GOPATH )
-TAG=$(shell git describe --abbrev=0 --tags)
+
 LDFLAGS=-ldflags " \
 -X '${VersionBase}/version.BuildTime=${BuildTime}' \
 -X '${VersionBase}/version.CommitID=${CommitID}' \
 -X '${VersionBase}/version.Version=${Version}' \
+-X '${VersionBase}/version.Tag=${Tag}' \
 -X '${VersionBase}/version.Domain=${Domain}' \
 -X '${VersionBase}/version.Data=hello' \
 "
