--- a/example/.lava/config/config.yaml
+++ b/example/.lava/config/config.yaml
@@ -4,7 +4,6 @@ app:
   version: "v0.0.1"
   home: ""
   debug: true
-  watcher: false
 watcher:
   driver: "noop"
   name: "default"
@@ -83,14 +82,10 @@ nsq:
 http:
   test: ""
 
-db:
-  default:
-    driver: "sqlite3x"
-    source: "./db/sqlite.db"
-
 registry:
   driver: "mdns"
-  ttl: "5s"
+  driver_config:
+    ttl: "5s"
 
 tracing:
   driver: "jaeger"
@@ -148,3 +143,15 @@ grpc_entry:
   connection_timeout: 2s
   max_header_list_size: 2
   header_table_size: 1
+
+gorm:
+  driver: "sqlite3"
+  driver_config:
+    dsn: "${data}/db/sqlite.db"
+
+timeout: "default"
+signal: "default"
+automaxprocs: "default"
+x-request-id: "default"
+logRecord: "default"
+scheduler: "default"
