--- a/.lava/config/config.dev.yaml
+++ b/.lava/config/config.dev.yaml
@@ -4,7 +4,8 @@ app:
   version: "v0.0.1"
   home: ""
   debug: true
-  watcher: false
+timeout:
+  - test
 watcher:
   resDriver: "noop"
   resDriverId: "default"
