--- a/example/protobuf.yaml
+++ b/example/protobuf.yaml
@@ -53,3 +53,6 @@ plugins:
   - name: errors
     out: protopb
     opt: paths=source_relative
+  - name: resty
+    out: protopb
+    opt: paths=source_relative
