--- a/example/protobuf.yaml
+++ b/example/protobuf.yaml
@@ -29,6 +29,7 @@ plugins:
     out: protopb
     opt:
       - paths=source_relative
+      - require_unimplemented_servers=false
   - name: grpc-gateway
     out: protopb
     opt:
