--- a/example/configs/config/config.yaml
+++ b/example/configs/config/config.yaml
@@ -52,12 +52,12 @@ rest_entry:
     dir: ""
     ext: ".html"
 orm:
-  - _id: default
+  - name: default
     driver: "sqlite3"
     driver_config:
       dsn: "file::memory:?cache=shared"
 
-  - _id: test
+  - name: test
     driver: "sqlite3"
     driver_config:
       dsn: "file::memory:?cache=shared"
