--- a/core/registry/registry_driver/mdns/config.yaml
+++ b/core/registry/registry_driver/mdns/config.yaml
@@ -1,4 +1,5 @@
 registry:
   driver: "mdns"
-  ttl: "2s"
-  text: ["txtv=0", "lo=1", "la=2"]
+  driver_config:
+    ttl: "5s"
+    text: [ "txtv=0", "lo=1", "la=2" ]
