--- a/example/configs/config/config.yaml
+++ b/example/configs/config/config.yaml
@@ -64,7 +64,7 @@ orm:
 grpcc:
   - name: test-grpc
     registry: "mdns"
-    addr: "localhost:8080"
+#    addr: "localhost:8080"
 ws:
   enabled: true
   configs:
