--- a/example/protobuf.yaml
+++ b/example/protobuf.yaml
@@ -1,56 +1,52 @@
+proto-path: ../.lava/proto
+checksum: d9b9eb272dc1b0cc4ff88e26c53256423b410eae
 root:
-  - proto
-  - rsocket
+- proto
+- rsocket
 deps:
-  - name: google
-    url: github.com/googleapis/googleapis
-    path: /google
-    version: v0.0.0-20220224004616-3c171936039b
-  - name: protoc-gen-openapiv2
-    url: github.com/grpc-ecosystem/grpc-gateway/v2
-    path: /protoc-gen-openapiv2
-    version: v2.5.0
-  - name: go-proto-validators
-    url: github.com/mwitkow/go-proto-validators
-    version: v0.3.2
-  - name: gogoproto
-    url: github.com/gogo/protobuf
-    path: /gogoproto
-    version: v1.3.2
-  - name: lava
-    url: /Users/barry/git/lava/proto/lava
-  - name: google/protobuf
-    url: /usr/local/include/google/protobuf
+- name: google
+  url: github.com/googleapis/googleapis
+  path: /google
+  version: v0.0.0-20220601021915-4e0282f92e4e
+- name: protoc-gen-openapiv2
+  url: github.com/grpc-ecosystem/grpc-gateway/v2
+  path: /protoc-gen-openapiv2
+  version: v2.5.0
+- name: go-proto-validators
+  url: github.com/mwitkow/go-proto-validators
+  version: v0.3.2
+- name: gogoproto
+  url: github.com/gogo/protobuf
+  path: /gogoproto
+  version: v1.3.2
+- name: lava
+  url: /Users/barry/git/lava/proto/lava
+- name: google/protobuf
+  url: /usr/local/include/google/protobuf
 plugins:
-  - name: go
-    out: protopb
-    opt: paths=import
-  - name: go-grpc
-    out: protopb
-    opt:
-      - paths=import
-      - require_unimplemented_servers=false
-  - name: grpc-gateway
-    out: protopb
-    opt:
-      - allow_repeated_fields_in_body=true
-      - paths=import
-  - name: openapiv2
-    out: ./docs/swagger
-    opt:
-      - logtostderr=true
-      - allow_repeated_fields_in_body=true
-      - repeated_path_param_separator=ssv
-  - name: doc
-    out: ./docs/markdown
-    opt:
-      - markdown,index.md
-  - name: lava
-    out: protopb
-    opt:
-      - lava=true
-      - path=protopb
-      - paths=import
-  - name: errors
-    out: protopb
-    opt: paths=import
+- name: go
+  out: protopb
+  opt: paths=import
+- name: go-grpc
+  out: protopb
+  opt:
+  - paths=import
+  - require_unimplemented_servers=false
+- name: grpc-gateway
+  out: protopb
+  opt:
+  - allow_repeated_fields_in_body=true
+  - paths=import
+- name: openapiv2
+  out: ./docs/swagger
+  opt:
+  - logtostderr=true
+  - allow_repeated_fields_in_body=true
+  - repeated_path_param_separator=ssv
+- name: doc
+  out: ./docs/markdown
+  opt:
+  - markdown,index.md
+- name: errors
+  out: protopb
+  opt: paths=import
