--- a/example/protobuf.yaml
+++ b/example/protobuf.yaml
@@ -31,6 +31,10 @@ plugins:
     opt:
       - paths=import
       - require_unimplemented_servers=false
+  - name: twirp
+    out: pkg/proto
+    opt:
+      - paths=import
   - name: errors
     out: pkg/proto
     opt: paths=import
