--- a/example/configs/config/config.yaml
+++ b/example/configs/config/config.yaml
@@ -70,9 +70,10 @@ service:
       dir: ""
       ext: ".html"
 orm:
-  driver: "sqlite3"
-  driver_config:
-    dsn: "db.sqlite3"
+  - name: default
+    driver: "sqlite3"
+    driver_config:
+      dsn: "db1.sqlite3"
 grpcc:
   - name: test-grpc
     registry: "mdns"
