--- a/internal/example/Makefile
+++ b/internal/example/Makefile
@@ -1,5 +1,5 @@
 Project=gid
-Base=github.com/pubgo/lava
+Base=github.com/pubgo/funk
 Tag=$(shell git describe --abbrev=0 --tags)
 Version=$(shell git tag --sort=committerdate | tail -n 1)
 BuildTime=$(shell date "+%F %T")
