--- a/internal/example/grpc/protobuf.yaml
+++ b/internal/example/grpc/protobuf.yaml
@@ -1,40 +1,42 @@
-vendor: ../../.proto
 checksum: c6132c902533783b0cd6ad205508882c26b81fcd
+vendor: ../../../.proto
 root:
-- proto
+  - proto
 includes:
-- proto
+  - proto
 deps:
-- name: google
-  url: github.com/googleapis/googleapis
-  path: /google
-  version: v0.0.0-20220601021915-4e0282f92e4e
-- name: protoc-gen-openapiv2
-  url: github.com/grpc-ecosystem/grpc-gateway/v2
-  path: /protoc-gen-openapiv2
-  version: v2.11.3
-- name: go-proto-validators
-  url: github.com/mwitkow/go-proto-validators
-  version: v0.3.2
-- name: google/protobuf
-  url: /usr/local/include/google/protobuf
-- name: retag
-  url: github.com/pubgo/protobuild
-  path: /retag
-  version: v0.0.7
-- name: errorpb
-  url: github.com/pubgo/funk
-  path: /proto/errorpb
-  version: v0.5.29-2
+  - name: google
+    url: github.com/googleapis/googleapis
+    path: /google
+    version: v0.0.0-20220601021915-4e0282f92e4e
+  - name: protoc-gen-openapiv2
+    url: github.com/grpc-ecosystem/grpc-gateway/v2
+    path: /protoc-gen-openapiv2
+    version: v2.15.2
+  - name: go-proto-validators
+    url: github.com/mwitkow/go-proto-validators
+    version: v0.3.2
+  - name: google/protobuf
+    url: /usr/local/include/google/protobuf
+  - name: retag
+    url: github.com/pubgo/protobuild
+    path: /retag
+    version: v0.0.7
+  - name: errorpb
+    url: github.com/pubgo/funk
+    path: /proto/errorpb
+    version: v0.5.29-22
 plugins:
-- name: go
-  out: pkg/proto
-  opt: paths=import
-- name: go-grpc
-  out: pkg/proto
-  opt:
-  - paths=import
-  - require_unimplemented_servers=false
-- name: lava-errors
-  out: pkg/proto
-  opt: paths=import
+  - name: go
+    out: pkg/proto
+    opt:
+      - paths=import
+  - name: go-grpc
+    out: pkg/proto
+    opt:
+      - paths=import
+      - require_unimplemented_servers=false
+  - name: lava-errors
+    out: pkg/proto
+    opt:
+      - paths=import
