--- a/internal/example/grpc/configs/config.yaml
+++ b/internal/example/grpc/configs/config.yaml
@@ -1,66 +1,10 @@
+resources:
+  - resources/grpc.yaml
+
 app:
   addr: ":8080"
   debug: true
-server:
-  middlewares:
-    - accesslog
-  print-route: true
-  grpc-cfg:
-    write_buffer_size: 1024
-    read_buffer_size: 1024
-    initial_window_size: 1
-    initial_conn_window_size: 1
-    keepalive_params:
-      max_connection_idle: 1s
-      max_connection_age: 2s
-      max_connection_age_grace: 2s
-      time: 1s
-      timeout: 1s
-    keepalive_policy:
-      permit_without_stream: true
-      min_time: 1s
-    codec: json
-    cp: gzip
-    dc: gzip
-    max_receive_message_size: 1
-    max_send_message_size: 1
-    max_concurrent_streams: 1
-    creds: tls
-    connection_timeout: 2s
-    max_header_list_size: 2
-    header_table_size: 1
-  rest-cfg:
-    enabled: true
-    prefork: false
-    server_header: ""
-    strict_routing: false
-    case_sensitive: false
-    immutable: false
-    unescape_path: false
-    etag: false
-    body_limit: 4194304
-    concurrency: 262144
-    read_timeout: 0
-    write_timeout: 0
-    idle_timeout: 0
-    read_buffer_size: 4096
-    write_buffer_size: 4096
-    compressed_file_suffix: .fiber.gz
-    proxy_header: ''
-    get_only: false
-    disable_keepalive: false
-    disable_default_date: false
-    disable_default_content_type: false
-    disable_header_normalizing: false
-    disable_startup_message: true
-    reduce_memory_usage: false
-    views:
-      dir: ""
-      ext: ".html"
-orm:
-  driver: "sqlite3"
-  driver_config:
-    dsn: "db.sqlite3"
+
 grpcc:
   - name: test-grpc
     registry: "mdns"
@@ -69,8 +13,11 @@ registry:
   driver: "mdns"
 tracing:
   driver: "jaeger"
-metric:
-  driver: "prometheus"
+
 logger:
   level: debug
   as-json: false
+
+metric:
+  driver: "prometheus"
+  interval: 5s
