--- a/protobuf.yaml
+++ b/protobuf.yaml
@@ -2,7 +2,7 @@ checksum: 726223e2caccb7cbc600c7b6f4c6bc28dff9707b
 vendor: .proto
 base:
   out: ./pkg
-  opt: paths=source_relative
+  paths: source_relative
 root:
   - proto
 deps:
@@ -15,7 +15,7 @@ deps:
   - name: errorpb
     url: github.com/pubgo/funk
     path: /proto/errorpb
-    version: v0.5.29-22
+    version: v0.5.29-30
 plugins:
   - name: go
   - name: lava-errors
