--- a/internal/example/grpc/configs/config.yaml
+++ b/internal/example/grpc/configs/config.yaml
@@ -6,12 +6,13 @@ app:
   debug: true
 
 gid-client:
-  addr: localhost:50051
-  srv: gid
+  service:
+    addr: localhost:50051
+    name: gid
 
 logger:
   level: debug
-  as-json: false
+  as_json: false
 
 metric:
   driver: "prometheus"
