--- a/protobuf.yaml
+++ b/protobuf.yaml
@@ -19,3 +19,7 @@ deps:
 plugins:
   - name: go
   - name: go-errors
+  - name: go-grpc
+    opt:
+      - require_unimplemented_servers=false
+  - name: grpc-gateway
