--- a/internal/example/grpc/configs/config.yaml
+++ b/internal/example/grpc/configs/config.yaml
@@ -5,6 +5,10 @@ app:
   addr: ":8080"
   debug: true
 
+gid-client-http:
+  base_url: "http://localhost:8080/gid/web"
+  service_name: "gid"
+
 gid-client:
   service:
     addr: localhost:50051
