--- a/internal/example/grpc/protobuf.yaml
+++ b/internal/example/grpc/protobuf.yaml
@@ -12,7 +12,7 @@ deps:
   - name: protoc-gen-openapiv2
     url: github.com/grpc-ecosystem/grpc-gateway/v2
     path: /protoc-gen-openapiv2
-    version: v2.15.2
+    version: v2.18.0
   - name: go-proto-validators
     url: github.com/mwitkow/go-proto-validators
     version: v0.3.2
@@ -25,7 +25,7 @@ deps:
   - name: errorpb
     url: github.com/pubgo/funk
     path: /proto/errorpb
-    version: v0.5.29-24
+    version: v0.5.39-0.20240119085415-f9786f6f04fc
 plugins:
   - name: go
     out: pkg/proto
