--- a/internal/example/grpc/protobuf.yaml
+++ b/internal/example/grpc/protobuf.yaml
@@ -1,4 +1,4 @@
-checksum: aee8784f82df4d509be444939f78575ded8b0af7
+checksum: 0ceb4a61364c8da4b57bd7135721a2462eb99628
 vendor: ../../../.proto
 root:
   - proto
@@ -13,6 +13,10 @@ deps:
     url: github.com/grpc-ecosystem/grpc-gateway/v2
     path: /protoc-gen-openapiv2
     version: v2.18.0
+  - name: openapiv3
+    url: github.com/google/gnostic
+    path: /openapiv3
+    version: v0.7.0
   - name: go-proto-validators
     url: github.com/mwitkow/go-proto-validators
     version: v0.3.2
