Feat: add grpc gateway http rule (#36)

--- a/internal/example/grpc/Makefile
+++ b/internal/example/grpc/Makefile
@@ -12,8 +12,11 @@ LDFLAGS=-ldflags " \
 -X '${Base}/version.project=${Project}' \
 "
 
+run_proxy:
+	enable_debug=true server_grpc_port=50052 server_http_port=8081 go run ${LDFLAGS} -v cmds/main_proxy.go grpc
+
 run:
-	enable_debug=true go run ${LDFLAGS} -v main.go grpc
+	enable_debug=true server_grpc_port=50051 server_http_port=8080 go run ${LDFLAGS} -v main.go grpc
 
 .PHONY: build
 build-gid:
@@ -26,3 +29,4 @@ vet:
 protobuf:
 	protobuild vendor
 	protobuild gen
+
